--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,32 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  text-align: left;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: #444;
   color: white;
 }
 
 .App-title {
   font-size: 1.5em;
+  text-align: center;
 }
 
 .App-intro {
+  border: 2px solid black;
   font-size: large;
   padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Xml-example {
+  background-color: lightgrey;
 }
+
+.Search-query {
+  padding: 20px;
+}
+
+.Search-param {
+  display: inline
+}
+
